# creo-rs

./: CMakeLists.txt  Cargo.toml  README.md  build.rs
.github/workflows/: format.yml  test.yml
crates/creo-example/: .gitignore  Cargo.toml  README.md
crates/creo-example/src/: lib.rs
crates/creo-example/text/usascii/: example_msg.txt
crates/creo-rs/: Cargo.toml  README.md
crates/creo-rs/src/: ffi.rs  lib.rs  pro_axis.rs  pro_core.rs  pro_curvedata.rs  pro_elem_id.rs  pro_element.rs  pro_elempath.rs  pro_feature.rs  pro_geomitem.rs  pro_importfeat.rs  pro_intf_data.rs  pro_mdl.rs  pro_menu_bar.rs  pro_point.rs  pro_reference.rs  pro_selection.rs  pro_size_const.rs  pro_solid.rs  pro_surface.rs  pro_toolkit_errors.rs  pro_ui_cmd.rs  pro_util.rs  pro_windows.rs
crates/creo-sys/: Cargo.toml  build.rs
crates/creo-sys/creo/: wrapper.h
creo/: wrapper.h
includes/: GearDesign.h  MfgMenu.h  PTApplsUnicodeUtils.h  TestAnalysis.h  TestAnimation.h  TestCable.h  TestCollect.h  TestConfig.h  TestConsts.h  TestDbms.h  TestDimension.h  TestElem.h  TestExtobj.h  TestFamTab.h  TestFeat.h  TestFeatObj.h  TestFeattree.h  TestFeattype.h  TestFiletypes.h  TestGenedata.h  TestGeom.h  TestGraphics.h  TestMenu.h  TestMfgNew.h  TestMisc.h  TestNotify.h  TestParams.h  TestRule.h  TestSect.h  TestSelect.h  TestSetup.h  TestSimpRep.h  TestSleep.h  TestTreeObj.h  TestXsec.h  TreeObjects.h  TreeTypesTable.h  UtilCable.h  UtilCollect.h  UtilCollectDtmpnt.h  (+19 more)
includes/memory/: CreoMemory.h
includes/utils/: TestError.h  UtilString.h
src/: lattice.rs  lib.rs  main.cpp
src/creo/: creo.rs  mod.rs  pro_axis.rs  pro_core.rs  pro_elem_id.rs  pro_element.rs  pro_elempath.rs  pro_feature.rs  pro_geomitem.rs  pro_mdl.rs  pro_menu_bar.rs  pro_objects.rs  pro_reference.rs  pro_selection.rs  pro_solid.rs  pro_surface.rs  pro_ui_cmd.rs
src/utils/: PTApplsUnicodeUtils.cpp  TestError.cpp  TestRunmode.cpp  UtilString.cpp
src/utils/pt_section/: TestSecerr.cpp  TestSect.cpp  UtilSect.cpp  pt_section.cpp
src/utils/pt_select/: TestSelect.cpp  pt_select.cpp
src/utils/pt_utils/: PTApplsUnicodeUtils.cpp  TestCollect.cpp  TestQcr.cpp  TestRunmode.cpp  UtilArcEndPoints.cpp  UtilCable.cpp  UtilCollect.cpp  UtilCollectDtmpnt.cpp  UtilError.cpp  UtilFiles.cpp  UtilGroups.cpp  UtilIntfData.cpp  UtilMath.cpp  UtilMatrix.cpp  UtilMenu.cpp  UtilMessage.cpp  UtilNames.cpp  UtilTree.cpp  UtilTypes.cpp  UtilVisit.cpp  pt_utils.cpp
text/usascii/: aslm_msg.txt
