[package]
name = "creo"
description = "Creo Parametric Toolkit API for Rust"
keywords = ["creo", "toolkit", "cad"]
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
creo-sys = { version = "0.1.0", path = "../creo-sys" }
